--- a/PTVApp/Resources/Base.lproj/Main.storyboard
+++ b/PTVApp/Resources/Base.lproj/Main.storyboard
@@ -24,6 +24,21 @@
             </objects>
             <point key="canvasLocation" x="122" y="83"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="u7B-A5-w2R">
+            <objects>
+                <viewController id="FfG-vs-GOd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6bj-ks-Wuk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="z9E-GB-9rV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zF6-0s-0Fi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1190" y="93"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
